src/plugin.h

extern MpdObj *connection;
extern GmpcProfiles *gmpc_profiles;
extern GmpcConnection     *gmpcconn;
/**
 * Allows the plugin to access the EasyCommand
 */
extern GmpcEasyCommand *gmpc_easy_command;
/**
 * Get this GtkWindow of the playlist.
 * Use this to set parent and so
 */
GtkWidget * playlist3_get_window(void);
/**
 * indicates if the window is hidden to tray
 */
gboolean    playlist3_window_is_hidden(void);
/**
 * Helper functions to get path to gmpc directory and metadata directory
 */

char  *         gmpc_get_full_glade_path(const char *filename);
gchar *         gmpc_get_user_path(const gchar *filename);
extern GObject *paned_size_group;
/** Main window */


/**
* show the main window
*/
void create_playlist3(void);
/**
* hide the main window
*/
int pl3_hide(void);